--- a/jenkins.yml
+++ b/jenkins.yml
@@ -3,6 +3,7 @@
     - jenkins
   vars:
     - solita_jenkins_security_realm: jenkins
+    - solita_jenkins_remote_param: -remote
     - solita_jenkins_users:
       - petrisi
     - jenkins_version: 2.46.2
